--- a/main/index.html
+++ b/main/index.html
@@ -13,7 +13,7 @@ include_once "../include/header.html";
                             </div>
                             <div class="title">
                                 <h2>
-                                    오케이 좋아 연예인 봉사단과 함께
+                                    오케이 좋아 <br class="mo-only" />연예인 봉사단과 함께
                                 </h2>
                                 <p>따뜻한 마음 행보간 웃음을 나누어 주세요</p>
                             </div>
@@ -23,14 +23,59 @@ include_once "../include/header.html";
             </div>
         </article>
     </section>
+    <section class="s02">
+        <article>
+            <div class="wrap">
+                <div class="title">
+                    <div class="logo"><img src="../images/common/okzzoa.png" alt="오케이좋아"></div>
+                    <h2>
+                        <strong>기쁨, 행복 그리고 사랑을 배달합니다.</strong><br />
+                        함께 나누는 즐거움
+                    </h2>
+                </div>
+                <div class="trigger-wrap">
+                    <div class="box">
+                        <div class="img-wrap"><img src="../images/main/s02_01.png" alt=""></div>
+                        <strong>
+                            우리나라 최초의 연예인 봉사단으로 이웃에게
+                        </strong>
+                        <p>
+                            따뜻한 마음과 행복한 웃음을 선사하고 있습니다.
+                        </p>
+                    </div>
+                    <div class="box right">
+                        <div class="img-wrap"><img src="../images/main/s02_02.png" alt=""></div>
+                        <strong>
+                            어제보다 따뜻한 우리를 만들기 위해서 본격적인
+                        </strong>
+                        <p>
+                            봉사프로젝트를 진행하고 있습니다.
+                        </p>
+                    </div>
+                    <div class="box">
+                        <div class="img-wrap"><img src="../images/main/s02_03.png" alt=""></div>
+                        <strong>
+                            어제보다 따뜻한 우리를 만들기 위해서 본격적인
+                        </strong>
+                        <p>
+                            봉사프로젝트를 진행하고 있습니다.
+                        </p>
+                    </div>
+                </div>
+            </div>
+        </article>
+    </section>
     <section class="s03">
+        <div class="section-bg">
+            <img src="../images/common/logo_gray_bg.png" alt="">
+        </div>
         <article>
             <div class="wrap">
                 <div class="title-wrap">
                     <div class="title">
                         <div class="logo"><img src="../images/common/okzzoa.png" alt="오케이좋아"></div>
-                        <h2>후원하기</h2>
-                        <p>당신의 소중한 후원으로 따듯한 세상을 만들어주세요.</p>
+                        <h2 class="split-title">후원하기</h2>
+                        <p class="split-sub-title">당신의 소중한 후원으로 따듯한 세상을 만들어주세요.</p>
                     </div>
                     <div class="more">
                         <a href="javascript:alert('준비중입니다')">더보기+</a>
@@ -40,57 +85,57 @@ include_once "../include/header.html";
                     <li>
                         <div class="bg"><img src="../images/main/support_bg01.png" alt=""></div>
                         <div class="info">
-                            <div class="icon-wrap"><img src="../images/main/support_icon01.png" alt=""></div>
                             <div class="text">
+                                <div class="icon-wrap"><img src="../images/main/support_icon01.png" alt=""></div>
                                 <h3>일시·정기후원</h3>
                                 <p>
                                     단 한번의 후원으로도 <br class="pc-only" />
                                     변화를 만들 수 있습니다.
                                 </p>
-                                <div class="button"><a href="javascript:alert('준비중입니다')">후원하기</a></div>
                             </div>
+                            <div class="button"><a href="javascript:alert('준비중입니다')">후원하기</a></div>
                         </div>
                     </li>
                     <li>
                         <div class="bg"><img src="../images/main/support_bg02.png" alt=""></div>
                         <div class="info">
-                            <div class="icon-wrap"><img src="../images/main/support_icon02.png" alt=""></div>
                             <div class="text">
+                                <div class="icon-wrap"><img src="../images/main/support_icon02.png" alt=""></div>
                                 <h3>기업후원</h3>
                                 <p>
                                     후원을 통해 꿈과 희망, <br class="pc-only" />
                                     그 이상의 가치를 실현합니다.
                                 </p>
-                                <div class="button"><a href="javascript:alert('준비중입니다')">후원하기</a></div>
                             </div>
+                            <div class="button"><a href="javascript:alert('준비중입니다')">후원하기</a></div>
                         </div>
                     </li>
                     <li>
                         <div class="bg"><img src="../images/main/support_bg03.png" alt=""></div>
                         <div class="info">
-                            <div class="icon-wrap"><img src="../images/main/support_icon03.png" alt=""></div>
                             <div class="text">
+                                <div class="icon-wrap"><img src="../images/main/support_icon03.png" alt=""></div>
                                 <h3>착한가게</h3>
                                 <p>
                                     기부 문화 확산에 <br class="pc-only" />
                                     동참하실 수 있습니다.
                                 </p>
-                                <div class="button"><a href="javascript:alert('준비중입니다')">후원하기</a></div>
                             </div>
+                            <div class="button"><a href="javascript:alert('준비중입니다')">후원하기</a></div>
                         </div>
                     </li>
                     <li>
                         <div class="bg"><img src="../images/main/support_bg04.png" alt=""></div>
                         <div class="info">
-                            <div class="icon-wrap"><img src="../images/main/support_icon04.png" alt=""></div>
                             <div class="text">
+                                <div class="icon-wrap"><img src="../images/main/support_icon04.png" alt=""></div>
                                 <h3>후원내역</h3>
                                 <p>
                                     내역 공개를 통해 <br class="pc-only" />
                                     투명하게 활동을 집행합니다.
                                 </p>
-                                <div class="button"><a href="javascript:alert('준비중입니다')">후원하기</a></div>
                             </div>
+                            <div class="button"><a href="javascript:alert('준비중입니다')">내역보기</a></div>
                         </div>
                     </li>
                 </ul>
@@ -155,67 +200,81 @@ include_once "../include/header.html";
                 <div class="swiper">
                     <div class="swiper-wrapper">
                         <div class="swiper-slide">
-                            <div class="video-wrap">
-                                <iframe src="https://www.youtube.com/embed/vYC8TKLYdZc?si=NP9gsUKl4D8Ey4te" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
-                            </div>
-                            <div class="text">
-                                <div class="date">2024.03.13</div>
-                                <p>화성남부노인복지관</p>
-                            </div>
+                            <a href="javascript:alert('준비중입니다');">
+                                <div class="img-wrap">
+                                    <img src="../images/main/s05_thumbnail.png" alt="썸네일">
+                                </div>
+                                <div class="text">
+                                    <div class="date">2024.03.13</div>
+                                    <p>화성남부노인복지관</p>
+                                </div>
+                            </a>
                         </div>
                         <div class="swiper-slide">
-                            <div class="video-wrap">
-                                <iframe src="https://www.youtube.com/embed/vYC8TKLYdZc?si=NP9gsUKl4D8Ey4te" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
-                            </div>
-                            <div class="text">
-                                <div class="date">2024.03.13</div>
-                                <p>화성남부노인복지관</p>
-                            </div>
+                            <a href="javascript:alert('준비중입니다');">
+                                <div class="img-wrap">
+                                    <img src="../images/main/s05_thumbnail.png" alt="썸네일">
+                                </div>
+                                <div class="text">
+                                    <div class="date">2024.03.13</div>
+                                    <p>화성남부노인복지관</p>
+                                </div>
+                            </a>
                         </div>
                         <div class="swiper-slide">
-                            <div class="video-wrap">
-                                <iframe src="https://www.youtube.com/embed/vYC8TKLYdZc?si=NP9gsUKl4D8Ey4te" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
-                            </div>
-                            <div class="text">
-                                <div class="date">2024.03.13</div>
-                                <p>화성남부노인복지관</p>
-                            </div>
+                            <a href="javascript:alert('준비중입니다');">
+                                <div class="img-wrap">
+                                    <img src="../images/main/s05_thumbnail.png" alt="썸네일">
+                                </div>
+                                <div class="text">
+                                    <div class="date">2024.03.13</div>
+                                    <p>화성남부노인복지관</p>
+                                </div>
+                            </a>
                         </div>
                         <div class="swiper-slide">
-                            <div class="video-wrap">
-                                <iframe src="https://www.youtube.com/embed/vYC8TKLYdZc?si=NP9gsUKl4D8Ey4te" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
-                            </div>
-                            <div class="text">
-                                <div class="date">2024.03.13</div>
-                                <p>화성남부노인복지관</p>
-                            </div>
+                            <a href="javascript:alert('준비중입니다');">
+                                <div class="img-wrap">
+                                    <img src="../images/main/s05_thumbnail.png" alt="썸네일">
+                                </div>
+                                <div class="text">
+                                    <div class="date">2024.03.13</div>
+                                    <p>화성남부노인복지관</p>
+                                </div>
+                            </a>
                         </div>
                         <div class="swiper-slide">
-                            <div class="video-wrap">
-                                <iframe src="https://www.youtube.com/embed/vYC8TKLYdZc?si=NP9gsUKl4D8Ey4te" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
-                            </div>
-                            <div class="text">
-                                <div class="date">2024.03.13</div>
-                                <p>화성남부노인복지관</p>
-                            </div>
+                            <a href="javascript:alert('준비중입니다');">
+                                <div class="img-wrap">
+                                    <img src="../images/main/s05_thumbnail.png" alt="썸네일">
+                                </div>
+                                <div class="text">
+                                    <div class="date">2024.03.13</div>
+                                    <p>화성남부노인복지관</p>
+                                </div>
+                            </a>
                         </div>
                         <div class="swiper-slide">
-                            <div class="video-wrap">
-                                <iframe src="https://www.youtube.com/embed/vYC8TKLYdZc?si=NP9gsUKl4D8Ey4te" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
-                            </div>
-                            <div class="text">
-                                <div class="date">2024.03.13</div>
-                                <p>화성남부노인복지관</p>
-                            </div>
+                            <a href="javascript:alert('준비중입니다');">
+                                <div class="img-wrap">
+                                    <img src="../images/main/s05_thumbnail.png" alt="썸네일">
+                                </div>
+                                <div class="text">
+                                    <div class="date">2024.03.13</div>
+                                    <p>화성남부노인복지관</p>
+                                </div>
+                            </a>
                         </div>
                         <div class="swiper-slide">
-                            <div class="video-wrap">
-                                <iframe src="https://www.youtube.com/embed/vYC8TKLYdZc?si=NP9gsUKl4D8Ey4te" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
-                            </div>
-                            <div class="text">
-                                <div class="date">2024.03.13</div>
-                                <p>화성남부노인복지관</p>
-                            </div>
+                            <a href="javascript:alert('준비중입니다');">
+                                <div class="img-wrap">
+                                    <img src="../images/main/s05_thumbnail.png" alt="썸네일">
+                                </div>
+                                <div class="text">
+                                    <div class="date">2024.03.13</div>
+                                    <p>화성남부노인복지관</p>
+                                </div>
+                            </a>
                         </div>
                     </div>
                 </div>
@@ -223,6 +282,9 @@ include_once "../include/header.html";
         </article>
     </section>
     <section class="s06">
+        <div class="section-bg">
+            <img src="../images/common/logo_gray_bg.png" alt="">
+        </div>
         <article>
             <div class="wrap">
                 <div class="title-wrap">
@@ -298,7 +360,21 @@ include_once "../include/header.html";
     </section>
 </main>
 
-
+<script src="../js/gasp.js"></script>
+<script src="../js/ScrollTrigger.js"></script>
 <?php
 include_once "../include/footer.html"
 ?>
+
+<script>
+    gsap.timeline({
+        scrollTrigger: {
+            trigger: ".s02",
+            start: "top top",
+            end: "+=220%",
+            scrub: 1,
+        }
+    }).to(".s02 .box", {
+        y: "-250%"
+    });
+</script>
