--- a/about/okzzoa.html
+++ b/about/okzzoa.html
@@ -1,9 +1,158 @@
 <?php
 include_once "../include/header.html";
+$PAGE_CODE_1 = "01";
+$PAGE_CODE_2 = "0101";
 ?>
-<main id="sub_page">
+<main id="sub_page" class="about okzzoa">
     <section class="sub_banner">
         <div class="bg"><img src="../images/about/banner.png" alt="소개 배너"></div>
+        <div class="inner">
+            <div class="banner_title">
+                <p>따뜻한 마음 행복한 웃음으로 나누어 주세요</p>
+                <h2>오케이 좋아 연예인 봉사단과 함께</h3>
+            </div>
+            <?php include_once "../include/tabmenu.html"?>
+        </div>
+    </section>
+    <section class="s01">
+        <article>
+            <div class="wrap">
+                <ul class="tabs">
+                    <li class="active"><a href="../about/okzzoa.html">오케이좋아연예인봉사단</a></li>
+                    <li><a href="../about/history.html">연혁</a></li>
+                    <li><a href="../about/organization.html">조직도</a></li>
+                    <li><a href="../about/ci.html">CI</a></li>
+                </ul>
+                <div class="content">
+                    <div class="banner_wrap">
+                        <img src="../images/about/okzzoa_banner01.png" alt="오케이좋아 연예인봉사단">
+                    </div>
+                    <div class="text">
+                        <h3>
+                            오케이좋아 <br class="pc-only">
+                            연예인 봉사단은
+                        </h3>
+                        <p>
+                            우리나라 최초의 연예인 봉사단으로 봉사의 중요성과 그 가치를 널리 전파하고자 2023년 봉사 단체를 창단하였습니다. <br class="block-only">
+                            <br class="block-only">
+                            많은 사랑을 받아온 연예인들이 따뜻한 온기가 필요한 사회약자층들에게 따듯한 마음과 행복한 웃음을 선사하면서 <br class="pc-only" />
+                            사회 전반에 긍정적인 영향력을 발휘하고 있습니다. <br class="pc-only" />
+                            또한, 대한민국을 봉사의 선진국으로 이끌겠다는 사명감으로 다양한 사회공헌 활동을 전개하고 있습니다.
+                        </p>
+                    </div>
+                </div>
+            </div>
+        </article>
+    </section>
+    <section class="s02">
+        <article>
+            <div class="wrap">
+                <h3>
+                    연예인 봉사단의 필요성
+                </h3>
+                <div class="contents">
+                    <div class="banner_wrap">
+                        <img src="../images/about/okzzoa_banner02.png" alt="">
+                    </div>
+                    <div class="info">
+                        <ul>
+                            <li>
+                                <div class="img-wrap">
+                                    <img src="../images/about/s02_01.png" alt="친숙함과 친밀감">
+                                </div>
+                                <p>
+                                    친숙함과 친밀감
+                                </p>
+                                <span>
+                                    연예인 특성상 일반인들이 바라보는 <br class="pc-only">
+                                    친숙함과 친밀감으로 쉽게 다가가서 <br class="pc-only">
+                                    따뜻한 마음을 전달하기 쉽습니다.
+                                </span>
+                            </li>
+                            <li>
+                                <div class="img-wrap">
+                                    <img src="../images/about/s02_02.png" alt="파급효과">
+                                </div>
+                                <p>
+                                    파급효과
+                                </p>
+                                <span>
+                                    그저 연예인 얼굴 한번 보러 오시는 <br class="pc-only">
+                                    모습에서 주변 분들에게 전파되는 <br class="pc-only">
+                                    파급효과가 큽니다.
+                                </span>
+                            </li>
+                            <li>
+                                <div class="img-wrap">
+                                    <img src="../images/about/s02_03.png" alt="홍보효과">
+                                </div>
+                                <p>
+                                    홍보효과
+                                </p>
+                                <span>
+                                    미디어에서 보던 연예인의 <br class="pc-only">
+                                    봉사 모습에 봉사에 대한 홍보효과를 <br class="pc-only">
+                                    극대화 할 수 있습니다.
+                                </span>
+                            </li>
+                        </ul>
+                    </div>
+                </div>
+            </div>
+        </article>
+    </section>
+    <section class="s03">
+        <article>
+            <div class="wrap">
+                <h3>
+                    연예인 봉사단의 지향점
+                </h3>
+                <div class="contents">
+                    <ul>
+                        <li>
+                            <div class="img-wrap">
+                                <img src="../images/about/s03_01.png" alt="나눔은 쉽게">
+                            </div>
+                            <div class="text">
+                                <h4>EASY</h4>
+                                <p>나눔은 쉽게</p>
+                                <span>
+                                    친숙하게 다가선 봉사는 너도 나도 쉽게 할수 있습니다. <br class="pc-only" />
+                                    본보기가 되고, 봉사는 나와는 무관하다는 생각에서 나도 할 수 있다는 인식의 변화를 통해 <br class="pc-only" />
+                                    봉사의 장벽을 허물고 함께하는 사회 분위기를 조성하고자 합니다.
+                                </span>
+                            </div>
+                        </li>
+                        <li>
+                            <div class="img-wrap">
+                                <img src="../images/about/s03_02.png" alt="행복은 크게">
+                            </div>
+                            <div class="text">
+                                <h4>JOY</h4>
+                                <p>행복은 크게</p>
+                                <span>
+                                    누가 누구보다 낮고 높음을 떠나, 함께 어울려 봉사함으로써 기쁨을 <br class="pc-only" />
+                                    나누고 노래하고 춤추며 행복을 꿈꾸는 사회를 지향합니다.
+                                </span>
+                            </div>
+                        </li>
+                        <li>
+                            <div class="img-wrap">
+                                <img src="../images/about/s03_03.png" alt="봉사의 세계화">
+                            </div>
+                            <div class="text">
+                                <h4>GLOBAL</h4>
+                                <p>봉사의 세계화</p>
+                                <span>
+                                    더 나아가 대한민국 봉사의 일반화, 대중화,다변화를 위해 노력하며 <br class="pc-only" />
+                                    세계에 “한류봉사”로 자리잡기 위해 다양한 활동을 펼치며 노력하고 있습니다.
+                                </span>
+                            </div>
+                        </li>
+                    </ul>
+                </div>
+            </div>
+        </article>
     </section>
 </main>
 
