--- a/main/index.html
+++ b/main/index.html
@@ -27,7 +27,7 @@ include_once "../include/header.html";
         <article>
             <div class="wrap">
                 <div class="title">
-                    <div class="logo"><img src="../images/common/okzzoa.png" alt="오케이좋아"></div>
+                    <div class="logo"><img src="../images/common/symbol.png" alt="오케이좋아"></div>
                     <h2>
                         <strong>기쁨, 행복 그리고 사랑을 배달합니다.</strong><br />
                         함께 나누는 즐거움
@@ -73,7 +73,7 @@ include_once "../include/header.html";
             <div class="wrap">
                 <div class="title-wrap">
                     <div class="title">
-                        <div class="logo"><img src="../images/common/okzzoa.png" alt="오케이좋아"></div>
+                        <div class="logo"><img src="../images/common/symbol.png" alt="오케이좋아"></div>
                         <h2 class="split-title">후원하기</h2>
                         <p class="split-sub-title">당신의 소중한 후원으로 따듯한 세상을 만들어주세요.</p>
                     </div>
@@ -146,37 +146,37 @@ include_once "../include/header.html";
         <article>
             <div class="wrap">
                 <div class="title">
-                    <div class="logo"><img src="../images/common/okzzoa.png" alt="오케이좋아"></div>
+                    <div class="logo"><img src="../images/common/symbol.png" alt="오케이좋아"></div>
                     <h2>오케이 좋아 연예인 봉사단</h2>
                 </div>
                 <div class="swiper">
                     <div class="swiper-wrapper">
                         <div class="swiper-slide">
-                            <div class="img-wrap"><img src="../images/main/s04_01.png" alt="배우 이정룡님"></div>
+                            <div class="img-wrap"><img src="../images/about/organization_01.png" alt="배우 이정룡님"></div>
                             <p>배우 이정룡님</p>
                         </div>
                         <div class="swiper-slide">
-                            <div class="img-wrap"><img src="../images/main/s04_02.png" alt="배우 박형준님"></div>
+                            <div class="img-wrap"><img src="../images/about/organization_02.png" alt="배우 박형준님"></div>
                             <p>배우 박형준님</p>
                         </div>
                         <div class="swiper-slide">
-                            <div class="img-wrap"><img src="../images/main/s04_03.png" alt="배우 이일화님"></div>
+                            <div class="img-wrap"><img src="../images/about/organization_03.png" alt="배우 이일화님"></div>
                             <p>배우 이일화님</p>
                         </div>
                         <div class="swiper-slide">
-                            <div class="img-wrap"><img src="../images/main/s04_04.png" alt="배우 지현우님"></div>
+                            <div class="img-wrap"><img src="../images/about/organization_04.png" alt="배우 지현우님"></div>
                             <p>배우 지현우님</p>
                         </div>
                         <div class="swiper-slide">
-                            <div class="img-wrap"><img src="../images/main/s04_05.png" alt="배우 감예령님"></div>
+                            <div class="img-wrap"><img src="../images/about/organization_05.png" alt="배우 감예령님"></div>
                             <p>배우 감예령님</p>
                         </div>
                         <div class="swiper-slide">
-                            <div class="img-wrap"><img src="../images/main/s04_06.png" alt="배우 정인호님"></div>
+                            <div class="img-wrap"><img src="../images/about/organization_06.png" alt="배우 정인호님"></div>
                             <p>배우 정인호님</p>
                         </div>
                         <div class="swiper-slide">
-                            <div class="img-wrap"><img src="../images/main/s04_07.png" alt="배우 조은숙님"></div>
+                            <div class="img-wrap"><img src="../images/about/organization_07.png" alt="배우 조은숙님"></div>
                             <p>배우 조은숙님</p>
                         </div>
                     </div>
@@ -189,7 +189,7 @@ include_once "../include/header.html";
             <div class="wrap">
                 <div class="title-wrap">
                     <div class="title">
-                        <div class="logo"><img src="../images/common/okzzoa.png" alt="오케이좋아"></div>
+                        <div class="logo"><img src="../images/common/symbol.png" alt="오케이좋아"></div>
                         <h2>봉사활동 스토리</h2>
                         <p>더불어 함께하는 세상, 오케이좋아연예인봉사단의 이야기를 공개합니다.</p>
                         <div class="more">
@@ -289,7 +289,7 @@ include_once "../include/header.html";
             <div class="wrap">
                 <div class="title-wrap">
                     <div class="title">
-                        <div class="logo"><img src="../images/common/okzzoa.png" alt="오케이좋아"></div>
+                        <div class="logo"><img src="../images/common/symbol.png" alt="오케이좋아"></div>
                         <h2>활동 소식을 확인해보세요</h2>
                         <p>당신의 소중한 후원으로 따듯한 세상을 만들어주세요.</p>
                         <div class="more">
