--- a/about/ci.html
+++ b/about/ci.html
@@ -8,8 +8,8 @@ $PAGE_CODE_2 = "0103";
         <div class="bg"><img src="../images/about/banner.png" alt="소개 배너"></div>
         <div class="inner">
             <div class="banner_title">
-                <p>따뜻한 마음 행복한 웃음으로 나누어 주세요</p>
-                <h2>오케이 좋아 연예인 봉사단과 함께</h3>
+                <p data-aos="fade-up" data-aos-dealy="300">따뜻한 마음 행복한 웃음으로 나누어 주세요</p>
+                <h2 data-aos="fade-up" data-aos-delay="500">오케이 좋아 <br class="mo-only"/>연예인 봉사단과 함께</h3>
             </div>
             <?php include_once "../include/tabmenu.html" ?>
         </div>
@@ -29,8 +29,7 @@ $PAGE_CODE_2 = "0103";
                         <p>
                             알파벳 O와 K를 활용하여 나비를 모티브로 개발하였습니다. <br class="pc-only" />
                             즐겁고 밝은 노란계열의 알파벳 O는 봉사하는 연예인들을 희망과 긍정의 그린계열의 알파벳 K는 <br class="pc-only" />
-                            우리가 지원해야하는 소외되고 어려운 사회적약자층을 의미합니다. <br class="pc-only" />
-                            O와 K 사이의 사랑과 활력의 핑크계열 하트는 봉사함으로써 피어나는 사회의 밝고 긍정적인 영향을 표현하였습니다. <br class="pc-only" />
+                            우리가 지원해야하는 소외되고 어려운 사회적약자층을 의미합니다. O와 K 사이의 사랑과 활력의 핑크계열 하트는 봉사함으로써 피어나는 사회의 밝고 긍정적인 영향을 표현하였습니다. <br class="pc-only" />
                             나비가 있어 꽃을 피우듯, 오케이좋아연예인봉사단의 활동을 통해 사회공동체 모두가 <br class="pc-only" />
                             행복한 희망의 꽃을 피우겠다는 포부를 담았습니다.
                         </p>
