--- a/main/index.html
+++ b/main/index.html
@@ -12,10 +12,10 @@ include_once "../include/header.html";
                                 <img src="../images/main/main_bg01.png" alt="">
                             </div>
                             <div class="title">
-                                <h2>
+                                <h2 data-aos="fade-up">
                                     오케이 좋아 <br class="mo-only" />연예인 봉사단과 함께
                                 </h2>
-                                <p>따뜻한 마음 행보간 웃음을 나누어 주세요</p>
+                                <p data-aos="fade-up" data-aos-delay="300">따뜻한 마음 행보간 웃음을 나누어 주세요</p>
                             </div>
                         </div>
                     </div>
@@ -27,10 +27,10 @@ include_once "../include/header.html";
         <article>
             <div class="wrap">
                 <div class="title">
-                    <div class="logo"><img src="../images/common/symbol.png" alt="오케이좋아"></div>
+                    <div class="logo" data-aos="fade-up"><img src="../images/common/symbol.png" alt="오케이좋아"></div>
                     <h2>
-                        <strong>기쁨, 행복 그리고 사랑을 배달합니다.</strong><br />
-                        함께 나누는 즐거움
+                        <strong class="splitText" data-aos="fade-up" data-aos-delay="500">기쁨, 행복 그리고 사랑을 배달합니다.</strong><br />
+                        <span class="splitText" data-aos="fade-up" data-aos-delay="500">함께 나누는 즐거움</span>
                     </h2>
                 </div>
                 <div class="trigger-wrap">
@@ -73,16 +73,16 @@ include_once "../include/header.html";
             <div class="wrap">
                 <div class="title-wrap">
                     <div class="title">
-                        <div class="logo"><img src="../images/common/symbol.png" alt="오케이좋아"></div>
-                        <h2 class="split-title">후원하기</h2>
-                        <p class="split-sub-title">당신의 소중한 후원으로 따듯한 세상을 만들어주세요.</p>
+                        <div class="logo" data-aos="fade-up"><img src="../images/common/symbol.png" alt="오케이좋아"></div>
+                        <h2 class="splitText" data-aos="fade-up">후원하기</h2>
+                        <p class="splitText" data-aos="fade-up">당신의 소중한 후원으로 따듯한 세상을 만들어주세요.</p>
                     </div>
                     <div class="more">
                         <a href="javascript:alert('준비중입니다')">더보기+</a>
                     </div>
                 </div>
                 <ul>
-                    <li>
+                    <li data-aos="fade-up" data-aos-delay="300">
                         <div class="bg"><img src="../images/main/support_bg01.png" alt=""></div>
                         <div class="info">
                             <div class="text">
@@ -96,7 +96,7 @@ include_once "../include/header.html";
                             <div class="button"><a href="javascript:alert('준비중입니다')">후원하기</a></div>
                         </div>
                     </li>
-                    <li>
+                    <li data-aos="fade-up" data-aos-delay="500">
                         <div class="bg"><img src="../images/main/support_bg02.png" alt=""></div>
                         <div class="info">
                             <div class="text">
@@ -110,7 +110,7 @@ include_once "../include/header.html";
                             <div class="button"><a href="javascript:alert('준비중입니다')">후원하기</a></div>
                         </div>
                     </li>
-                    <li>
+                    <li data-aos="fade-up" data-aos-delay="700">
                         <div class="bg"><img src="../images/main/support_bg03.png" alt=""></div>
                         <div class="info">
                             <div class="text">
@@ -124,7 +124,7 @@ include_once "../include/header.html";
                             <div class="button"><a href="javascript:alert('준비중입니다')">후원하기</a></div>
                         </div>
                     </li>
-                    <li>
+                    <li data-aos="fade-up" data-aos-delay="900">
                         <div class="bg"><img src="../images/main/support_bg04.png" alt=""></div>
                         <div class="info">
                             <div class="text">
@@ -146,10 +146,10 @@ include_once "../include/header.html";
         <article>
             <div class="wrap">
                 <div class="title">
-                    <div class="logo"><img src="../images/common/symbol.png" alt="오케이좋아"></div>
-                    <h2>오케이 좋아 연예인 봉사단</h2>
+                    <div class="logo" data-aos="fade-up"><img src="../images/common/symbol.png" alt="오케이좋아"></div>
+                    <h2 data-aos="fade-up" data-aos-delay="300">오케이 좋아 연예인 봉사단</h2>
                 </div>
-                <div class="swiper">
+                <div class="swiper" data-aos="fade-up" data-aos-delay="500" dir="ltr">
                     <div class="swiper-wrapper">
                         <div class="swiper-slide">
                             <div class="img-wrap"><img src="../images/about/organization_01.png" alt="배우 이정룡님"></div>
@@ -189,15 +189,15 @@ include_once "../include/header.html";
             <div class="wrap">
                 <div class="title-wrap">
                     <div class="title">
-                        <div class="logo"><img src="../images/common/symbol.png" alt="오케이좋아"></div>
-                        <h2>봉사활동 스토리</h2>
-                        <p>더불어 함께하는 세상, 오케이좋아연예인봉사단의 이야기를 공개합니다.</p>
-                        <div class="more">
+                        <div class="logo" data-aos="fade-up"><img src="../images/common/symbol.png" alt="오케이좋아"></div>
+                        <h2 data-aos="fade-up" data-aos-delay="300">봉사활동 스토리</h2>
+                        <p class="splitText" data-aos="fade-up" data-aos-delay="500">더불어 함께하는 세상, 오케이좋아연예인봉사단의 이야기를 공개합니다.</p>
+                        <div class="more" data-aos="fade-up" data-aos-delay="500">
                             <a href="javascript:alert('준비중입니다')">더보기+</a>
                         </div>
                     </div>
                 </div>
-                <div class="swiper">
+                <div class="swiper" dir="ltr" data-aos="fade-up" data-aos-delay="500">
                     <div class="swiper-wrapper">
                         <div class="swiper-slide">
                             <a href="javascript:alert('준비중입니다');">
@@ -289,10 +289,10 @@ include_once "../include/header.html";
             <div class="wrap">
                 <div class="title-wrap">
                     <div class="title">
-                        <div class="logo"><img src="../images/common/symbol.png" alt="오케이좋아"></div>
-                        <h2>활동 소식을 확인해보세요</h2>
-                        <p>당신의 소중한 후원으로 따듯한 세상을 만들어주세요.</p>
-                        <div class="more">
+                        <div class="logo" data-aos="fade-up"><img src="../images/common/symbol.png" alt="오케이좋아"></div>
+                        <h2 data-aos="fade-up" data-aos-delay="300">활동 소식을 확인해보세요</h2>
+                        <p class="splitText" data-aos="fade-up" data-aos-delay="500">당신의 소중한 후원으로 따듯한 세상을 만들어주세요.</p>
+                        <div class="more" data-aos="fade-up" data-aos-delay="500">
                             <a href="javascript:alert('준비중입니다')">더보기+</a>
                         </div>
                     </div>
@@ -362,6 +362,7 @@ include_once "../include/header.html";
 
 <script src="../js/gasp.js"></script>
 <script src="../js/ScrollTrigger.js"></script>
+<script src="../js/splitText.js"></script>
 <?php
 include_once "../include/footer.html"
 ?>
@@ -371,10 +372,11 @@ include_once "../include/footer.html"
         scrollTrigger: {
             trigger: ".s02",
             start: "top top",
-            end: "+=220%",
+            end: "+=400%",
             scrub: 1,
         }
     }).to(".s02 .box", {
         y: "-250%"
     });
 </script>
+
