--- a/about/history.html
+++ b/about/history.html
@@ -8,7 +8,7 @@ $PAGE_CODE_2 = "0102";
         <div class="bg"><img src="../images/about/banner.png" alt="소개 배너"></div>
         <div class="inner">
             <div class="banner_title">
-                <p data-aos="fade-up" data-aos-dealy="300">따뜻한 마음 행복한 웃음으로 나누어 주세요</p>
+                <p data-aos="fade-up" data-aos-dealy="300">따뜻한 마음 행복한 웃음으로 나누어 주세요 <span class="line"></span></p>
                 <h2 data-aos="fade-up" data-aos-delay="500">오케이 좋아 <br class="mo-only"/>연예인 봉사단과 함께</h3>
             </div>
             <?php include_once "../include/tabmenu.html"?>
@@ -126,10 +126,18 @@ $PAGE_CODE_2 = "0102";
                             </div>
                         </div>
                     </div>
-                    <div class="bottom">
-                        <div class="img-wrap"><img src="../images/about/history01.png" alt="연혁"></div>
-                        <div class="img-wrap"><img src="../images/about/history02.png" alt="연혁"></div>
-                        <div class="img-wrap"><img src="../images/about/history03.png" alt="연혁"></div>
+                    <div class="swiper">
+                        <div class="swiper-wrapper">
+                        <div class="swiper-slide">
+                                <img src="../images/about/history01.png" alt="연혁">
+                            </div>
+                            <div class="swiper-slide">
+                                <img src="../images/about/history02.png" alt="연혁">
+                            </div>
+                            <div class="swiper-slide s_size">
+                                <img src="../images/about/history03.png" alt="연혁">
+                            </div>
+                        </div>
                     </div>
                 </div>
             </div>
