--- a/about/okzzoa.html
+++ b/about/okzzoa.html
@@ -8,7 +8,7 @@ $PAGE_CODE_2 = "0101";
         <div class="bg"><img src="../images/about/banner.png" alt="소개 배너"></div>
         <div class="inner">
             <div class="banner_title">
-                <p data-aos="fade-up" data-aos-dealy="300">따뜻한 마음 행복한 웃음으로 나누어 주세요</p>
+                <p data-aos="fade-up" data-aos-dealy="300">따뜻한 마음 행복한 웃음으로 나누어 주세요 <span class="line"></span></p>
                 <h2 data-aos="fade-up" data-aos-delay="500">오케이 좋아 <br class="mo-only"/>연예인 봉사단과 함께</h3>
             </div>
             <?php include_once "../include/tabmenu.html"?>
