--- a/sponsor/corporate.html
+++ b/sponsor/corporate.html
@@ -8,7 +8,7 @@ $PAGE_CODE_2 = "0302";
         <div class="bg"><img src="../images/sponsor/banner.png" alt="소개 배너"></div>
         <div class="inner">
             <div class="banner_title">
-                <p data-aos="fade-up" data-aos-dealy="300">따뜻한 마음 행복한 웃음을 나누어 주세요</p>
+                <p data-aos="fade-up" data-aos-dealy="300">따뜻한 마음 행복한 웃음을 나누어 주세요 <span class="line"></span></p>
                 <h2 data-aos="fade-up" data-aos-delay="500">오케이 좋아 <br class="mo-only" />연예인 봉사단과 함께</h3>
             </div>
             <?php include_once "../include/tabmenu.html" ?>
